---
source: compiler-core/src/parse/tests.rs
expression: "\n        case \"\" {\n          first ++ rest -> rest\n        }\n        "
---
error: Syntax error
  ┌─ /src/parse/error.rakun:3:11
  │
3 │           first ++ rest -> rest
  │           ^^^^^ This must be a string literal

We can't tell what size this prefix should be so we don't know
how to handle this pattern.

If you want to match one character consider using `pop_grapheme`
from the stdlib's `rakun/string` module.
